# glTFComp

./: README.md
glTFcomp/: CMakeLists.txt  commands.txt
glTFcomp/scripts/: gltfcmp.py
glTFcomp/src/: gltf_loader.cpp  gltf_loader.h  pybind_wrapper.cpp
